--- a/src/oferta.css
+++ b/src/oferta.css
@@ -89,7 +89,7 @@ span{
 }
 
 .more-info{
-    color:#30ac4a;
+    color: #7f7f7f;
     text-align: center;
     width: 60%;
     margin: 0 auto;
@@ -114,6 +114,7 @@ span{
     display: block;
     padding: 10px 18px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .container-about{
@@ -164,6 +165,15 @@ span{
         width:90%;
     } 
 }
+@media (min-width: 1620px){
+    .main-article-header{
+        margin: 0 auto;
+        width: 70%;
+    }
+    .main-article-header h2{
+        font-size: 2.5rem;
+    }
+}
 
 @media (max-width: 1296px){
     .main-article-header h2{
@@ -185,6 +195,7 @@ span{
 
     .more-info{
         width: 90%;
+        
     }
     .main-article-info{
         grid-template-columns: 1fr;
@@ -193,5 +204,17 @@ span{
 
     .info-text *{
         padding: 0 0 16px 0;
+    }
+
+    .about-article{
+        grid-template-columns: 1fr;
+    }
+
+    .about-img{
+        left: 0;
+    }
+
+    .about-article::after{
+        background-image: none;
     }
 }
