--- a/src/oferta.css
+++ b/src/oferta.css
@@ -48,6 +48,7 @@ span{
 
 .main-article-header p{
     font-size: 14px;
+    padding: 0 0 12px 0;
 }
 
 .main-article-info{
@@ -159,6 +160,12 @@ span{
     line-height: 36px;
     padding: 0 0 18px 0;
 }
+
+.about-text p{
+    padding: 0 0 12px 0;
+}
+
+
 
 @media (max-width: 1466px){
     .container{
