--- a/src/oferta.css
+++ b/src/oferta.css
@@ -155,14 +155,40 @@ span{
     overflow-x: hidden;
 }
 
+.about-text{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.about-first, .about-second{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: flex-start;
+}
+
+.about-item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 0;
+    height: 96px;
+}
+
+.about-item p{
+    padding: 0 0 0 8px;
+}
+
+.about-item .about-icon{
+    width: 48px;
+    max-width: 100%;
+    height: auto;
+}
+
 .about-text h3{
     font-size: 24px;
     line-height: 36px;
     padding: 0 0 18px 0;
-}
-
-.about-text p{
-    padding: 0 0 12px 0;
 }
 
 
@@ -225,3 +251,12 @@ span{
         background-image: none;
     }
 }
+
+@media (max-width: 768px){
+    .about-text{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+}
+
